@@ -208,7 +208,10 @@ public class Subpopulation implements Group
         {
         state.output.println(NUM_INDIVIDUALS_PREAMBLE + individuals.length, verbosity, log);
         for(int i = 0 ; i < individuals.length; i++)
+	    {
+            state.output.println(INDIVIDUAL_INDEX_PREAMBLE + Code.encode(i), verbosity, log);
             individuals[i].printIndividualForHumans(state, log, verbosity);
+	    }
         }
         
     /** Prints an entire subpopulation in a form readable by humans but also parseable by the computer using readSubpopulation(EvolutionState, LineNumberReader). */
@@ -218,7 +221,10 @@ public class Subpopulation implements Group
         {
         state.output.println(NUM_INDIVIDUALS_PREAMBLE + Code.encode(individuals.length), verbosity, log);
         for(int i = 0 ; i < individuals.length; i++)
+	    {
+            state.output.println(INDIVIDUAL_INDEX_PREAMBLE + Code.encode(i), verbosity, log);
             individuals[i].printIndividual(state, log, verbosity);
+	    }
         }
         
     /** Prints an entire subpopulation in a form readable by humans but also parseable by the computer using readSubpopulation(EvolutionState, LineNumberReader). */
@@ -227,7 +233,10 @@ public class Subpopulation implements Group
         {
         writer.println(NUM_INDIVIDUALS_PREAMBLE + Code.encode(individuals.length));
         for(int i = 0 ; i < individuals.length; i++)
+	    {
+            writer.println(INDIVIDUAL_INDEX_PREAMBLE + Code.encode(i));
             individuals[i].printIndividual(state, writer);
+	    }
         }
     
     /** Reads a subpopulation from the format generated by printSubpopulation(....).  If the number of individuals is not identical, the individuals array will
@@ -258,7 +267,14 @@ public class Subpopulation implements Group
             int j = Code.readIntegerWithPreamble(INDIVIDUAL_INDEX_PREAMBLE, state, reader);
             // sanity check
             if (j!=i) state.output.warnOnce("On reading subpopulation from text stream, some individual indexes in the subpopulation did not match.");
-            individuals[i].readIndividual(state, reader);
+            if (individuals[i] != null)
+		individuals[i].readIndividual(state, reader);
+	    else
+		{
+		state.output.warnOnce("On reading subpopulation from text stream, some slots in the subpopulation were null.\n" +
+				      "Had to use newIndividual() instead of readIndividual().");
+		individuals[i] = species.newIndividual(state, reader); //tibi 
+		}
             }
         }
         
