@@ -1203,3 +1203,12 @@ Version		Change Log
 	Incorrect parameter (P_PROB instead of P_PROBABILITY) fixed in
 		ProportionalTournamentSelection.  Thanks to Robert Baruch
 		<autophile@zoominternet.net>
+
+17 Let's get ready to PRERELEASE!
+	Deleted some /tmp/out writing crud in ecsuite
+	Bug Fix: reading/writing Subpopulations potentially tried to ask
+		null individuals to read themselves, and forgot to write out
+		a preamble.  Thanks to Tibi Simu <Tiberiu.Simu@ucd.ie>
+	Small crossover type parameter bug fixed, and printout error in
+		FloatVectorSpecies fixed.  Thanks to Elena Popovici
+		<epopovici@gmu.edu>
